<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/mainTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/just_another_yes_another_weather_app"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mainTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/and_there_was_much_rejoicing_yay"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/teal_700"/>

    <ImageView
        android:id="@+id/currentWeatherIconImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/subTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/current_weather_conditions_icon"/>

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentWeatherIconImageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/your_location"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/locationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentWeatherIconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/city_state"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/locationDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/currentTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/current_temperature"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/currentTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/current_temp_goes_here"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/currentTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/highTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/today_s_high"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/highTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentTempDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/high_temp_goes_here"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/highTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/lowTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/highTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/low_temp"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/lowTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/highTempDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/low_temp_goes_here"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/lowTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/conditionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lowTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/weather_conditions"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/conditionsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/conditionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/maybe_the_weather_s_nice_take_a_look_outside"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/conditionsDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search_for_weather_by_zip"/>

</androidx.constraintlayout.widget.ConstraintLayout>