<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/searchTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/search_for_weather_by_zip_code"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <EditText
        android:id="@+id/zipCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/please_enter_zip_code"
        android:inputType="number"
        android:autofillHints="@string/please_enter_zip_code"/>

    <ImageView
        android:id="@+id/currentWeatherIconImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/zipCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/current_weather_conditions_icon"/>

    <TextView
        android:id="@+id/searchLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentWeatherIconImageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/searched_location"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/searchLocationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currentWeatherIconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchLocationDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/searchCurrentTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchLocationTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/current_temperature"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/searchCurrentTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchLocationDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchCurrentTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/searchHighTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchCurrentTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/today_s_high"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/searchHighTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchCurrentTempDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchHighTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/searchLowTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchHighTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/low_temp"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/searchLowTempDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchHighTempDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchLowTempDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <TextView
        android:id="@+id/searchConditionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchLowTempTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/weather_conditions"
        android:textColor="@color/purple_700"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/searchConditionsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchConditionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/maybe_the_weather_s_nice_take_a_look_outside"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintTop_toBottomOf="@id/searchConditionsDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_divider_line"
        android:scaleType="fitXY"
        android:contentDescription="@string/divider_line"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/search"/>


</androidx.constraintlayout.widget.ConstraintLayout>